[tool.poetry]
name = "serial-monitor"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
yamllint = "^1.26.2"
codespell = "^2.1.0"

[tool.poetry.group.dev.dependencies]
yamllint = "^1.35.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
